[project]
name = "diffusion-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.1.31",
    "flax>=0.10.5",
    "jax>=0.6.0",
    "jaxlib>=0.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "optax>=0.2.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]
